airflow/logs/dag_id=hands_on_test/run_id=manual__2022-06-08T06:18:40.397380+00:00/task_id=copy_order_data/attempt=1.log
[2022-06-08 06:23:55,607] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: hands_on_test.copy_order_data manual__2022-06-08T06:18:40.397380+00:00 [queued]>
[2022-06-08 06:23:55,638] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: hands_on_test.copy_order_data manual__2022-06-08T06:18:40.397380+00:00 [queued]>
[2022-06-08 06:23:55,640] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-08 06:23:55,641] {taskinstance.py:1357} INFO - Starting attempt 1 of 2
[2022-06-08 06:23:55,642] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-08 06:23:55,667] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): copy_order_data> on 2022-06-08 06:18:40.397380+00:00
[2022-06-08 06:23:55,677] {standard_task_runner.py:52} INFO - Started process 15289 to run task
[2022-06-08 06:23:55,683] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'hands_on_test', 'copy_order_data', 'manual__2022-06-08T06:18:40.397380+00:00', '--job-id', '184', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpik6vjd5n', '--error-file', '/tmp/tmpa04ykgcu']
[2022-06-08 06:23:55,687] {standard_task_runner.py:80} INFO - Job 184: Subtask copy_order_data
[2022-06-08 06:23:55,778] {task_command.py:369} INFO - Running <TaskInstance: hands_on_test.copy_order_data manual__2022-06-08T06:18:40.397380+00:00 [running]> on host b79bd65fcc57
[2022-06-08 06:23:56,038] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=hands_on_test
AIRFLOW_CTX_TASK_ID=copy_order_data
AIRFLOW_CTX_EXECUTION_DATE=2022-06-08T06:18:40.397380+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-08T06:18:40.397380+00:00
[2022-06-08 06:23:56,085] {base.py:68} INFO - Using connection ID 'postgres_db' for task execution.
[2022-06-08 06:23:56,111] {dbapi.py:208} INFO - Running statement: 
COPY order FROM '/var/lib/postgresql/data/lmwn/Orders.csv' DELIMITER ',' CSV HEADER;, parameters: None
[2022-06-08 06:23:56,117] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 2: COPY order FROM '/var/lib/postgresql/data/lmwn/Orders.csv' D...
             ^

[2022-06-08 06:23:56,144] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=hands_on_test, task_id=copy_order_data, execution_date=20220608T061840, start_date=20220608T062355, end_date=20220608T062356
[2022-06-08 06:23:56,169] {standard_task_runner.py:97} ERROR - Failed to execute job 184 for task copy_order_data (syntax error at or near "order"
LINE 2: COPY order FROM '/var/lib/postgresql/data/lmwn/Orders.csv' D...
             ^
; 15289)
[2022-06-08 06:23:56,225] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-08 06:23:56,306] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
